[tool.poetry]
name = "to-pdf"
version = "0.1.0"
description = ""
authors = ["Kristina Davydova <tutsilianna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = {extras = ["all"], version = "^0.25.0"}
sqlalchemy = {extras = ["asyncin"], version = "^2.0.25"}
pydantic = {extras = ["email"], version = "^2.5.3"}
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
